--- a/collaborations.html
+++ b/collaborations.html
@@ -18,7 +18,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/profile_pic_grey_ntk.png" alt="" /></a>
+					<a href="/index.html" class="image avatar"><img src="images/profile_pic_grey_ntk.png" alt="" /></a>
 					<h2><strong>Nicolas Kurtovic</strong></h2>
 					<h1>Astronomer, Postdoctoral Researcher.</h1>
 					<nav id="nav">
@@ -115,6 +115,7 @@
 
 	</body>
 </html>
+
 
 
 
